--- a/rainlily/.config/waybar/style.css
+++ b/rainlily/.config/waybar/style.css
@@ -36,7 +36,6 @@
     border: none;
     border-radius: 0;
     min-height: 0;
-	font-weight: 400;
 }
 
 /* Waybar */
@@ -56,6 +55,7 @@ tooltip {
 #tray,
 #window,
 #mpris,
+#idle_inhibitor,
 #pulseaudio,
 #backlight,
 #custom-weather,
@@ -82,6 +82,7 @@ tooltip {
 
 window#waybar.empty #window {
 	background-color: transparent;
+	color: transparent;
 	border: none;
 }
 
@@ -93,9 +94,10 @@ window#waybar.empty #window {
 
 #workspaces button {
 	background-color: @background;
-	color: @foreground;
-	margin: 0;
+	color: @color6;
 	padding: 8px;
+	margin: 0;
+	font-weight: normal;
 }
 
 #workspaces button.persistent {
@@ -108,9 +110,11 @@ window#waybar.empty #window {
 
 #workspaces button.visible {
 	color: @color6;
+	/*margin: 2px;
+	border: 1px solid @color6;*/
 }
 
-#workspaces button.active {
+#workspaces button.focused {
 	color: @color15;
 	background-color: @color6;
 }
