--- a/rainlily/.config/waybar/style.css
+++ b/rainlily/.config/waybar/style.css
@@ -110,11 +110,9 @@ window#waybar.empty #window {
 
 #workspaces button.visible {
 	color: @color6;
-	/*margin: 2px;
-	border: 1px solid @color6;*/
 }
 
-#workspaces button.focused {
+#workspaces button.active {
 	color: @color15;
 	background-color: @color6;
 }
